--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div id="w-node-fb1a2ab8-32d3-c8eb-8ab9-b5ecbd65909b-489431f5">
-          <div id="w-node-fb1a2ab8-32d3-c8eb-8ab9-b5ecbd65909c-489431f5" class="text__abovethefold">Thank you for visiting Studio Kiri. Our studio is currently closed. <br><br>Kiri is a collaboration between <a href="https://www.willneeteson.com/">Will Neeteson</a> and <a href="https://www.kentdebruin.com/">Kent de Bruin</a>. Past artefacts include digital platforms, conceptual thinking, brand identities and MVP development.<br><br>If you wanna chat please email <a href="mailto:hi@kentdebruin.com">Kent </a>or <a href="mailto:hello@willneeteson.com">Will</a>.</div>
+          <div id="w-node-fb1a2ab8-32d3-c8eb-8ab9-b5ecbd65909c-489431f5" class="text__abovethefold">Thank you for visiting Studio Kiri. Our studio is currently closed. <br><br>Kiri is a collaboration between <a href="https://www.willneeteson.com/">Will Neeteson</a> and <a href="https://www.kentdebruin.com/">Kent de Bruin</a>. Past artefacts include digital platforms, conceptual thinking, brand identities and MVP development.<br><br>If you want to chat please email <a href="mailto:hi@kentdebruin.com">Kent </a>or <a href="mailto:hello@willneeteson.com">Will</a>.</div>
         </div>
       </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=62cbe50d2ed81f72aa9431f4" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
